# comet

frontends/comet_dsl/: CMakeLists.txt  comet.cpp
include/comet/Conversion/IndexTreeToSCF/: AbstractLoopOp.h
include/comet/Dialect/IndexTree/IR/: IndexTree.h
lib/Conversion/IndexTreeToSCF/: AbstractLoopOp.cpp  IndexTreeToSCF.cpp
lib/Conversion/TensorAlgebraToIndexTree/: TensorAlgebraToIndexTree.cpp
lib/Dialect/IndexTree/IR/: IndexTree.cpp
